--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "postprocessing": "^6.38.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-icons": "^5.5.0",
     "tailwind-merge": "^3.4.0",
     "three": "^0.182.0"
   },
